# rendering

./: .gitignore  CMakeLists.txt  FastRenderer.cpp  FastRenderer.hpp  README.md  main.cpp
render_metal/: MetalBuffer.hpp  MetalBuffer.mm  MetalCommandQueues.hpp  MetalCommandQueues.mm  MetalCommandbuffer.hpp  MetalCommandbuffer.mm  MetalDevice.hpp  MetalDevice.mm  MetalImage.hpp  MetalImage.mm  MetalOutSurface.hpp  MetalOutSurface.mm  MetalPipeline.hpp  MetalPipeline.mm  MetalRenderPassDescriptor.hpp  MetalRenderPassDescriptor.mm  MetalShaderFunction.hpp  MetalShaderFunction.mm  MetalSwapChain.hpp  MetalSwapChain.mm  MetalUtils.hpp  MetalUtils.mm  MetalUtilsCpp.hpp  MetalUtilsCpp.mm
render_pipeline/: CommandQueue.hpp  Commandbuffer.hpp  Device.hpp  GBuffer.hpp  GImage.hpp  Pipeline.hpp  RenderHelper.cpp  RenderHelper.hpp  RenderPassDescriptor.hpp  ShaderFunction.hpp  Surface.hpp  SwapChain.hpp
shaders/metal/: PlaneShader.metal
